2000-03-26  Dave Love  <fx@gnu.org>

	* files.el: Doc fixes.
	(file-truename): Include `[' in wildcard characters.
	(automount-dir-prefix): Customize.
	(find-file-wildcards): Add :version.
	(find-file-noselect): Simplify a mapcar call.

	* emacs-lisp/lisp-mode.el (lisp-eval-defun): Make arglist
	compatible with inf-lisp version.
	(eval-defun-1): Fix custom-declare-variable case.

2000-03-24  Gerd Moellmann  <gerd@gnu.org>

	* Makefile (COMPILE_FIRST): New macro.
	(compile-files): Compile files from COMPILE_FIRST first.

	* emacs-lisp/bytecomp.el (byte-compile-eval): Disable new
	code.

	* emacs-lisp/lisp.el (beginning-of-defun-raw): Add regexp
	matching open parenthesis in column 0 to defun-prompt-regexp
	only if open-paren-in-column-0-is-defun-start is set.

	* sun-curs.el: Require CL at compile-time only.

	* msb.el (msb--choose-file-menu): Use `(apply #'list ...)'
	instead of copy-list which is a function from CL.
	(msb--choose-menu, msb--mode-menu-cond)
	(msb--create-buffer-menu-2): Use dolist instead of mapc.
	(msb--init-file-alist): Use mapcar instead of mapcan.
	(msb--aggregate-alist): Use mapcar instead of mapcan.  Fix
	`(' in column 0 in doc string.
	(msb--add-separators): Use mapcar instead of mapcan.

	* cus-dep.el: Require CL at compile-time only.

2000-03-24  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/bytecomp.el (byte-compile-warning-types)
	(byte-compile-warnings): New warning `noruntime'.
	(byte-compile-constants, byte-compile-variables): Fix docstring.
	(byte-compile-initial-macro-environment): Use `byte-compile-eval' to
	execute `eval-whenc-compile's body.
	(byte-compile-unresolved-functions): Fix docstring.
	(byte-compile-eval): New function.
	(byte-compile-callargs-warn): Check if the function will be available
	at runtime (via property `byte-compile-noruntime').
	(byte-compile-print-syms): New function.
	(byte-compile-warn-about-unresolved-functions): Also warn about
	`noruntime' functions (and use `byte-compile-print-syms').